--- a/app/globals.css
+++ b/app/globals.css
@@ -38,3 +38,15 @@ body {
   color: var(--foreground);
   font-family: var(--font-inter), sans-serif;
 }
+
+@layer utilities {
+  @keyframes animateWave {
+    0% {
+      transform: scaleY(0.5);
+    }
+
+    100% {
+      transform: scaleY(1.2);
+    }
+  }
+}
